<resources>
    <string name="app_name">AnaKoSehat</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="reg_acc">Don\'t Have Account yet?</string>
    <string name="tv_register">Register</string>
    <string name="edt_name">Name</string>
    <string name="login">Login</string>
    <string name="log_text">Already have an account?</string>
    <string name="physical_attribute_tv">Physical Attribute</string>
    <string name="tv_pa_desc">AnaKoSehat requires your physical attributes to determine your daily caloric needs using  Angka Kebutuhan Gizi (AKG).</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="woman">Woman</string>
    <string name="sex">Sex:</string>
    <string name="purpose">Purpose</string>
    <string name="man">Man</string>
    <string name="sedentary">Sedentary</string>
    <string name="light">Light</string>
    <string name="moderate">Moderate</string>
    <string name="high">High</string>
    <string name="next">Next</string>
    <string name="activity_level">Activity Level</string>
    <string name="allergies">Allergies</string>
    <string name="do_you_have_common_allergies_to_certain_foods">Do you have common allergies to certain foods?</string>
    <string name="common_exclusions">Common Exclusions</string>
    <string name="description">Can\'t find it in the list above? You can choose certain foods on the preference at the recommendation generator/</string>
    <string name="your_akg_result">Your AKG Result</string>
    <string name="akg_description">Approximate Nutrional Adequacy Rate(RDA) calories based on your gender, age, height, weight, activity level and goals.</string>
    <string name="tv_user">Hallo User</string>
    <string name="tv_uask">What are you going to eat today?</string>
    <string name="tv_filter">Filter</string>
    <string name="btn_generate">Generate Menu Recommendation</string>
    <string name="btn_pa_save">Save</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="tv_favmeals">Your Favorite Generated Meals</string>
</resources>